@@ -1,5 +1,8 @@
 2009-01-06  Donal K. Fellows  <dkf@users.sf.net>
 
+	* generic/tclDictObj.c (DictIncrCmd): Corrected twiddling in internals
+	of dictionaries so that literals can't get destroyed.
+
 	* tests/expr.test: Eliminate non-ASCII char. [Bug 2006879]
 
 	* generic/tclOOInfo.c (InfoObjectMethodsCmd,InfoClassMethodsCmd): Only
